force-app/main/default/objects/OrderItem/fields/ERP_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>ERP_Confirmed__c</fullName>
    <description>Set to true by ERP subscriber Flow when warehouse acknowledges Hardware_Fulfillment__e event. Idempotency guard: Flow only publishes event if ERP_Confirmed__c = false. Used in North Star KPI report for Track 1 SLA measurement.</description>
    <label>ERP Confirmed</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>