force-app/main/default/objects/OrderItem/fields/Fiber_Meters__c.field-meta.xml
<CustomField>
    <fullName>Fiber_Meters__c</fullName>
    <description>Length of fiber run in meters for FIBER_INSTALL order lines. Drives install price ($500 + $250 per 100m) and FSL Work Order technician prep time. Copied to WorkOrder.Fiber_Meters__c at Order activation. See ADR-003.</description>
    <label>Fiber Meters</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>