force-app/main/default/objects/OrderItem/fields/Site_Id__c.field-meta.xml
<CustomField>
    <fullName>Site_Id__c</fullName>
    <description>Site identifier for this order line item. Copied from the product configuration context (SmartOfficeBundleContext.SiteConfiguration.siteId). Used as the Work Order subject prefix and as the ERP routing key in Hardware_Fulfillment__e. See ADR-006.</description>
    <label>Site ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>